fix toList